--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
 
+@media all and (min-width: 800px) {
+  #nav {
+    width: 300px;
+    float: left;
+    margin-right: 20px;
+  }
+  #grid {
+    width: 450px;
+    float: left;
+  }
+}
+
+@media all and (max-width: 799px) {
+  #nav {
+    width: 100%;
+  }
+  #grid {
+    width: 100%;
+  }
+}
+
 ul {
 width: 600px;
 list-style:none;
