Minor changes to layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,17 @@
         
     } 
     
+    
 }
 
 .sortbutton {
-    width:10em;
+    width:12em;
 }
 
 .override-ui-screen-hidden {
   display:block !important;   
 }
 
+.tweet {
+
+}
